project links added

--- a/index.html
+++ b/index.html
@@ -458,17 +458,21 @@
             <div class="icon"><i class="bi bi-briefcase"></i></div>
             <h4 class="title"><a href="">Library Management System</a></h4>
             <p class="description">here we used esclipse and developed the Desktop application in JavaFX in front end, MySQL in Backend and Java in the middle part. Automatic mailling system was implemented in the software.</p>
+            <p class="description">GitHub Link -> <a href="https://github.com/dixitabhishek239/T.E.-DBMS-Mini_LibraryManagementSystem">Library Management System git link</a></p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
             <h4 class="title"><a href="">SPPU Question Papers</a></h4>
             <p class="description">we used android studio and developed the code in JAVA.
               For storing the the data we used firebase database, in which we uploaded each and every file in storage session and access token is generated which we used further in realtime database, and accessed those links in JAVA code using Collection frame work</p>
+              <p class="description">Google Play Store Link -> <a href="https://play.google.com/store/apps/details?id=com.sppupapers">SPPU Question Papers App link</a></p>
+              <!-- https://github.com/WinPointLC/WinPoint-Digitization -->
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
             <h4 class="title"><a href="">Batch Tracker System</a></h4>
             <p class="description">In this Application we used JavaFX at the front end, java in the middle part and MsSQL at the Backend part. The vital usage of the application is to keep the track in the batches launched.</p>
+            <p class="description">GitHub Link -> <a href="https://github.com/WinPointLC/WinPoint-Digitization">Batch Tracker System Git link</a></p>
           </div>
         </div>
 
